<resources>
    <string name="app_name">NuevoReproductorMultimedia</string>
    <string name="titulo">REPRODUCTOR MULTIMEDIA</string>
    <string name="reproductor">REPRODUCTOR</string>
    <string name="preferencias">PREFERENCIAS</string>
    <string name="reproductor_boton">Reproductor mp3</string>
    <string name="preferencias_boton">PREFERENCIAS</string>
    <string name="superReproductor">Super Reproductor mp3</string>
    <string name="estado">Estado de la reproduccion</string>
    <string name="estado_de_la_reproducci_n">Estado de la reproducción</string>
</resources>
